# nodecum-device

./: Makefile  README.md
boot/: usb_cdc_acm.conf
shell_console/: CMakeLists.txt  Kconfig  prj.conf
shell_console/src/: main.c  shell_browser_console.c  shell_browser_console.h  shell_console.c  shell_console.h
smp_svr/: CMakeLists.txt  Kconfig  adafruit_feather_nrf52480.overlay  display.conf  prj.conf  ssd1306_128x32.overlay
smp_svr/src/: buttons.c  buttons.h  main.c  shell_cfb.c  shell_cfb.h  shell_parse.c  shell_parse.h  uievq.c  uievq.h
src/: Kconfig  shell_browser.c  shell_browser.h  shell_parse.c  shell_parse.h  strbuf.h
